# CITB520_Computer_Games_Practice

./: .gitignore  CMakeLists.txt  README.md
assets/Tallnut/: parse.js
assets/sprites/: sources.md
assets/sprites/2D-image-pack-alien-patrol/: -LER ANTES-.txt  -READ BEFORE-.txt
libs/imgui-docking/: CMakeLists.txt
src/: EngineBase.h  GameState.h  ImGuiMenu.cpp  ImGuiMenu.h  Vehicle.h  main.cpp  utils.h
src/ComponentSystem/: Components.h  NativeScriptSystem.cpp  PhysicsSystem.cpp  Systems.cpp  Systems.h
src/Core/: AssetManager.h  Common.h  Random.h
src/FileLoaders/: RawImage.cpp  RawImage.h
src/Game/: EnemyBehaviourScript.cpp  Game.cpp  Game.h  ImGuiMenu.cpp  ImGuiMenu.h  Level.h  PlantTypes.h  Scripts.h  VehicleBehaviourScript.cpp
src/Game/NativeScripts/: BulletScript.cpp  BulletSpawnScript.cpp  GameLostScript.cpp  GlobalSunSpawnScript.cpp  LawnMowerScript.cpp  PlantScript.cpp  PlantSpawnScript.cpp  Scripts.h  ShovelControllerScript.cpp  SunCollector.cpp  SunScript.cpp  SunSpawnScript.cpp  WaveControllerScript.cpp  ZombieScript.cpp  ZombieSpawnScript.cpp
src/Physics/: Colliders.cpp  Colliders.h
src/Rendering/: BatchRecorder.cpp  BatchRecorder.h  BatchRenderer.cpp  BatchRenderer.h  Material.h  Sprite.h
src/Rendering/OpenGLWrapper/: BufferGPU.cpp  BufferGPU.h  DebugGL.cpp  DebugGL.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TextureGPU.cpp  TextureGPU.h  VAO.cpp  VAO.h
